[package]
name = "libslirp-sys"
version = "4.0.0"
authors = ["Marc-André Lureau <marcandre.lureau@redhat.com>"]
repository = "https://github.com/elmarco/libslirp-sys"
homepage = "https://github.com/elmarco/libslirp-sys"
documentation = "https://docs.rs/libslirp-sys"
description = "FFI bindings for libslirp."
license = "MIT"
keywords = ["network", "bindings"]
build = "build.rs"
links = "slirp"
edition = "2018"

[build-dependencies]
pkg-config = "0.3.2"
